--- a/WMS/Views/ProductGroup/Edit.cshtml
+++ b/WMS/Views/ProductGroup/Edit.cshtml
@@ -1,24 +1,36 @@
 ﻿@model Ganedata.Core.Entities.Domain.ProductGroups
 @using Ganedata.Core.Entities.Helpers
+@using Ganedata.Core.Models;
 @section scripts {
 
     @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionType = ExtensionType.SpinEdit, Theme = GaneStaticAppExtensions.DevexTheme },
-        new StyleSheet { ExtensionType = ExtensionType.DateEdit, Theme = GaneStaticAppExtensions.DevexTheme }
+        new StyleSheet { ExtensionType = ExtensionType.DateEdit, Theme = GaneStaticAppExtensions.DevexTheme },
+        new StyleSheet { ExtensionType = ExtensionType.UploadControl, Theme = GaneStaticAppExtensions.DevexTheme }
         )
 
     @Html.DevExpress().GetScripts(
         new Script { ExtensionType = ExtensionType.SpinEdit },
-        new Script { ExtensionType = ExtensionType.DateEdit }
+        new Script { ExtensionType = ExtensionType.DateEdit },
+        new Script { ExtensionType = ExtensionType.UploadControl }
         )
 }
 
 @{
     ViewBag.Title = "Update Product Group";
 }
+<script id="uploaderProductGroup" type="text/x-jquery-tmpl">
+    <tr>
+        <td id="tdProductfileName">${FileName}</td>
+        <td><p>&nbsp;</p></td>
+        <td><a class="LRemove" onclick="_RemoveProductGroupFile('${FileName}')">Remove</a></td>
 
+    </tr>
+
+</script>
 <h2><span>Update Product Group</span></h2>
 <div>
+    @Html.Hidden("ProductGroup", true)
     <div class="col-md-6 pull-left">
 
         @using (Html.BeginForm())
@@ -37,11 +49,33 @@
                     @Html.ValidationMessageFor(model => model.ProductGroup)
                 </div>
             </div>
+
             <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.LabelFor(model => model.IconPath, new { @class = "col-md-4" })
+                @Html.Label("Image File", new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.IconPath)
-                    @Html.ValidationMessageFor(model => model.ProductGroup)
+                    @Html.Partial("_Uploader")
+                    <div id="dvfiles" style="display:block;">
+                        <strong>Uploaded Files</strong>
+                        @if (ViewBag.Files != null)
+                        {
+                            foreach (var file in ViewBag.Files)
+                            {
+                                <table>
+                                    <tr>
+                                        <td id="tdProductfileName">@file</td>
+                                        <td>
+                                            <p>&nbsp;</p>
+                                        </td>
+                                        <td><a class="LRemove" onclick="_RemoveProductGroupFile('@file')">Remove</a></td>
+                                        <td>
+                                            <p>&nbsp;</p>
+                                        </td>
+
+                                    </tr>
+                                </table>
+                            }
+                        }
+                    </div>
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -50,6 +84,7 @@
                     @Html.DropDownListFor(model => model.DepartmentId, ViewBag.Departments as SelectList, "Select Department", new { @class = "chosen-select" })
                 </div>
             </div>
+
 
             <div class="input-group h-100 justify-content-center align-items-center">
                 <div class="col-md-offset-2 col-md-10 bottom-right">
