--- a/WMS/Views/TenantDepartment/Edit.cshtml
+++ b/WMS/Views/TenantDepartment/Edit.cshtml
@@ -5,47 +5,85 @@
 
     @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionType = ExtensionType.SpinEdit, Theme = GaneStaticAppExtensions.DevexTheme },
-        new StyleSheet { ExtensionType = ExtensionType.DateEdit, Theme = GaneStaticAppExtensions.DevexTheme }
+        new StyleSheet { ExtensionType = ExtensionType.DateEdit, Theme = GaneStaticAppExtensions.DevexTheme },
+        new StyleSheet { ExtensionType = ExtensionType.UploadControl, Theme = GaneStaticAppExtensions.DevexTheme }
         )
 
     @Html.DevExpress().GetScripts(
         new Script { ExtensionType = ExtensionType.SpinEdit },
-        new Script { ExtensionType = ExtensionType.DateEdit }
+        new Script { ExtensionType = ExtensionType.DateEdit },
+        new Script { ExtensionType = ExtensionType.UploadControl }
         )
 }
+<script id="uploadertenantDepartment" type="text/x-jquery-tmpl">
+    <tr>
+        <td id="tddepartmentfileName">${FileName}</td>
+        <td><p>&nbsp;</p></td>
+        <td><a class="LRemove" onclick="_RemoveProductGroupFile('${FileName}')">Remove</a></td>
 
+    </tr>
+</script>
 
 <h2><span> Tenant Departments</span></h2>
 <div class="col-md-12 p-0">
     <div class="col-md-6">
-        @using (Html.BeginForm("Edit","TenantDepartment"))
+        @using (Html.BeginForm("Edit", "TenantDepartment"))
         {
-            @Html.HiddenFor(model=>model.DepartmentId)
+            @Html.HiddenFor(model => model.DepartmentId)
             @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
+            <div class="form-horizontal">
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.LabelFor(model => model.DepartmentName, htmlAttributes: new { @class = "control-label col-md-4" })
-                <div class="col-md-8">
-                    @Html.EditorFor(model => model.DepartmentName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DepartmentName, "", new { @class = "text-danger" })
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.LabelFor(model => model.DepartmentName, htmlAttributes: new { @class = "control-label col-md-4" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.DepartmentName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DepartmentName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Enter or scan Account Code", htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(model => model.AccountID, ViewBag.AccountIDs as SelectList, "Select Account", new { @class = "chosen-select" })
+                    </div>
+                </div>
+
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Image File", new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.Partial("_Uploader")
+                        <div id="dvfiles" style="display:block;">
+                            <strong>Uploaded Files</strong>
+                            @if (ViewBag.Files != null)
+                            {
+                                foreach (var file in ViewBag.Files)
+                                {
+                                    <table>
+                                        <tr>
+                                            <td id="tdProductfileName">@file</td>
+                                            <td>
+                                                <p>&nbsp;</p>
+                                            </td>
+                                            <td><a class="LRemove" onclick="_RemoveProductGroupFile('@file')">Remove</a></td>
+                                            <td>
+                                                <p>&nbsp;</p>
+                                            </td>
+
+                                        </tr>
+                                    </table>
+                                }
+                            }
+                        </div>
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    <div class="col-md-offset-2 col-md-10 bottom-right">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
+                    </div>
                 </div>
             </div>
-            <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.Label("Enter or scan Account Code", htmlAttributes: new { @class = "col-md-4" })
-                <div class="col-md-8">
-                    @Html.DropDownListFor(model => model.AccountID, ViewBag.AccountIDs as SelectList, "Select Account", new { @class = "chosen-select" })
-                </div>
-            </div>
-            <div class="input-group h-100 justify-content-center align-items-center">
-                <div class="col-md-offset-2 col-md-10 bottom-right">
-                    <input type="submit" value="Save" class="btn btn-primary" />
-                    <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
-                </div>
-            </div>
-        </div>
         }
 
 
