add data protection page Imported from Changeset 2313

--- a/WarehouseEcommerce/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="h-100 text-center align-items-center pt-70 pb-70">
             <div class="w-100 text-white">
                 <div class="col-md-offset-4 col-md-4 background-banner">
-                    <h1 class="display-3">BusinesSense</h1>
+                    <h1 class="display-3">BusinessSense</h1>
                     <p class="lead mb-10">Class-Leading WMS Solutions For Your Business</p>
                     <a href="getstarted" class="btn btn-group-lg custom-green">Arrange a Demonstration</a>
                 </div>
