--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -95,7 +95,7 @@
                                 <span>0333-32 30 202</span>
                             </li>
                         </ul>
-                            <span class="book-demo-2"><a href="getstarted">Book A Demo</a></span>
+                            <span class="book-demo-2"><a href="get-started">Book A Demo</a></span>
                     </div>
                 </div>
             </div>
