--- a/WMS/Views/ProductGroup/Edit.cshtml
+++ b/WMS/Views/ProductGroup/Edit.cshtml
@@ -19,81 +19,111 @@
 @{
     ViewBag.Title = "Update Product Group";
 }
-<script id="uploaderProductGroup" type="text/x-jquery-tmpl">
-    <tr>
-        <td id="tdProductfileName">${FileName}</td>
-        <td><p>&nbsp;</p></td>
-        <td><a class="LRemove" onclick="_RemoveProductGroupFile('${FileName}')">Remove</a></td>
+<script type="text/javascript">
+    function onFileUploadComplete(s, e) {
+        debugger;
+        if (e.callbackData) {
+            debugger;
+            $("#dvfiles").show();
+            var fileData = e.callbackData.split('|');
+            var Fileobj = { FileName: fileData };
+            var result = $("#uploaderTenantDept").tmpl(Fileobj);
+            $("#dvfiles").append(result);
+            $('.se-pre-con').hide();
+            $("#FileLength").val('True');
 
-    </tr>
+        }
 
+
+    }
+    function onFileUploadStart(s, e) {
+        if ($("#FileLength").val() == "True") {
+            e.cancel = true;
+            alert("Only one file allow to be select");
+            return;
+
+        }
+    }
 </script>
+
 <h2><span>Update Product Group</span></h2>
 <div>
-    @Html.Hidden("ProductGroup", true)
+    @Html.Hidden("productGroup", true)
+    @Html.Hidden("hdPFiles", (List<string>)ViewBag.Files)
     <div class="col-md-6 pull-left">
 
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
+            <div class="form-horizontal">
 
-            @Html.ValidationSummary(true)
-            @Html.HiddenFor(model => model.ProductGroupId)
+                @Html.ValidationSummary(true)
+                @Html.HiddenFor(model => model.ProductGroupId)
 
-            <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.LabelFor(model => model.ProductGroup, new { @class = "col-md-4" })
-                <div class="col-md-8">
-                    @Html.EditorFor(model => model.ProductGroup)
-                    @Html.ValidationMessageFor(model => model.ProductGroup)
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.LabelFor(model => model.ProductGroup, new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.ProductGroup)
+                        @Html.ValidationMessageFor(model => model.ProductGroup)
+                    </div>
                 </div>
-            </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Enter Department", htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(model => model.DepartmentId, ViewBag.Departments as SelectList, "Select Department", new { @class = "chosen-select" })
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Image File", new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.Partial("_Uploader")
+                        <br />
+                        <div id="dvfiles" style="display:block;">
 
-            <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.Label("Image File", new { @class = "col-md-4" })
-                <div class="col-md-8">
-                    @Html.Partial("_Uploader")
-                    <div id="dvfiles" style="display:block;">
-                        <strong>Uploaded Files</strong>
-                        @if (ViewBag.Files != null)
-                        {
-                            foreach (var file in ViewBag.Files)
+                            <strong>Uploaded Files</strong>
+                            @if (ViewBag.Files != null)
                             {
-                                <table>
-                                    <tr>
-                                        <td id="tdProductfileName">@file</td>
-                                        <td>
-                                            <p>&nbsp;</p>
-                                        </td>
-                                        <td><a class="LRemove" onclick="_RemoveProductGroupFile('@file')">Remove</a></td>
-                                        <td>
-                                            <p>&nbsp;</p>
-                                        </td>
+                                foreach (var file in ViewBag.Files)
+                                {
+                                    @Html.Hidden("FileLength", (bool?)ViewBag.FileLength)
+                                    <table>
+                                        <tr>
+                                            <td id="tdProductfileName">@file</td>
+                                            <td>
+                                                <p>&nbsp;</p>
+                                            </td>
+                                            <td><a class="LRemove" onclick="_RemoveProofOfDeliveryFile('@file')">Remove</a></td>
+                                            <td>
+                                                <p>&nbsp;</p>
+                                            </td>
 
-                                    </tr>
-                                </table>
+                                        </tr>
+                                    </table>
+                                }
                             }
-                        }
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    <div class="col-md-offset-2 col-md-10 bottom-right">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
                     </div>
                 </div>
             </div>
-            <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.Label("Enter Department", htmlAttributes: new { @class = "col-md-4" })
-                <div class="col-md-8">
-                    @Html.DropDownListFor(model => model.DepartmentId, ViewBag.Departments as SelectList, "Select Department", new { @class = "chosen-select" })
-                </div>
-            </div>
-
-
-            <div class="input-group h-100 justify-content-center align-items-center">
-                <div class="col-md-offset-2 col-md-10 bottom-right">
-                    <input type="submit" value="Save" class="btn btn-primary" />
-                    <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
-                </div>
-            </div>
-        </div>
         }
 
     </div>
 </div>
+<script id="uploaderTenantDept" type="text/x-jquery-tmpl">
+    <tr>
+        <td id="tdfileName">${FileName}</td>
+        <td><p>&nbsp;</p></td>
+        <td><a class="LRemove" onclick="_RemoveProofOfDeliveryFile('${FileName}')">Remove</a></td>
+
+    </tr>
+</script>
