--- a/WarehouseEcommerce/Views/Home/AboutUs.cshtml
+++ b/WarehouseEcommerce/Views/Home/AboutUs.cshtml
@@ -14,7 +14,7 @@
                                 <b>Here you can check what our company is about</b>
                             </span>
                         </h1>
-                        <a class="custom-green" href="getstarted">Book a Demo <i class="fa fa-arrow-right"></i></a>
+                        <a class="custom-green" href="get-started">Book a Demo <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
