--- a/WarehouseEcommerce/Views/Home/Blog.cshtml
+++ b/WarehouseEcommerce/Views/Home/Blog.cshtml
@@ -13,7 +13,7 @@
                         <b>Read Interesting Blogs</b>
                     </span>
                 </h1>
-                <a class="custom-green" href="getstarted">Book a Demo <i class="fa fa-arrow-right"></i></a>
+                <a class="custom-green" href="get-started">Book a Demo <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
