--- a/WarehouseEcommerce/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                 <div class="col-md-offset-4 col-md-4 background-banner">
                     <h1 class="display-3">BusinessSense</h1>
                     <p class="lead mb-10">Class-Leading WMS Solutions For Your Business</p>
-                    <a href="getstarted" class="btn btn-group-lg custom-green">Arrange a Demonstration</a>
+                    <a href="get-started" class="btn btn-group-lg custom-green">Arrange a Demonstration</a>
                 </div>
             </div>
         </div>
