--- a/WarehouseEcommerce/Views/Home/Services.cshtml
+++ b/WarehouseEcommerce/Views/Home/Services.cshtml
@@ -13,7 +13,7 @@
                         <p><i>Enable business process automation through sustainable technologies.</i></p>
                     </span>
                 </h1>
-                <a class="custom-green" href="getstarted">ARRANGE A DEMONSTRATION <i class="fa fa-arrow-right"></i></a>
+                <a class="custom-green" href="get-started">ARRANGE A DEMONSTRATION <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
