--- a/WarehouseEcommerce/Views/Shared/_FooterPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_FooterPartial.cshtml
@@ -19,7 +19,7 @@
                     <div class="widget mb-30">
                         <div class="widget-title">
                             <div class="footer-nav">
-                                <a href="getstarted">Get Started</a>
+                                <a href="get-started">Get Started</a>
                                 <a href="promotions">Promotions</a>
                                 <a href="privacy-policy">Privacy Policy</a>
                                 <a href="blog">Blog</a>
