--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -81,7 +81,7 @@
                                     <li><a href="blog">Blog & News</a></li>
                                     <li><a href="about-us">About Us</a></li>
                                     <li><a class="hardware-active" href="https://shop.ganedata.co.uk">Hardware</a></li>
-                                    <li class="book-demo-1"><a href="getstarted">Book A Demo</a></li>
+                                    <li class="book-demo-1"><a href="get-started">Book A Demo</a></li>
                                     @*<li><a href="#"><i class="fa fa-search"></i></a></li>*@
                                 </ul>
                             </nav>
