Tooltip added for all the products on the home page Imported from Changeset 2319

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_BestSellerPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_BestSellerPartial.cshtml
@@ -26,7 +26,7 @@
                                     <!-- Smartshop Images End -->
                                 </div>
                                 <div class="caption col-sm-8 col-xs-8">
-                                    <h4><a href="@Url.Action("ProductDetails","Products", new { productId= item.ProductId })">@item.Name</a></h4>
+                                    <h4><a data-toggle="tooltip" title="@item.Name" href="@Url.Action("ProductDetails","Products", new { productId= item.ProductId })">@item.Name</a></h4>
                                     <p class="price">
                                         @Model.CurrencySign@item.SellPrice
                                     </p>
