--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
@@ -145,3 +145,8 @@
     var d = document; s = d.createElement("script"); s.type = "text/javascript"; s.id = "zsiqscript"; s.defer = true;
     s.src = "https://salesiq.zoho.eu/widget"; t = d.getElementsByTagName("script")[0]; t.parentNode.insertBefore(s, t); d.write("<div id='zsiqwidget'></div>");
 </script>
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
