--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
@@ -51,7 +51,7 @@
                                             </div>
                                         </div>
                                         <div class="caption">
-                                            <h4><a href="@Url.Action("ProductDetails", "Products", new { productId = item.ProductId })">@item.Name</a></h4>
+                                            <h4><a data-toggle="tooltip" title="@item.Name @item.BarCode" href="@Url.Action("ProductDetails", "Products", new { productId = item.ProductId })">@item.Name</a></h4>
                                             <div class="rating pull-left">
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
